# futures_quant_framework

./: .gitignore  README.md  requirements.txt
.cursor/rules/: project-conventions.mdc
extern_libs/ctp_pybind/: CMakeLists.txt  ctp_pybind.cpp
extern_libs/exanic_pybind/: CMakeLists.txt  README.md  exanic_pybind.cpp
extern_libs/exanic_pybind/sdk/: exanic.h  exanic_time.h  fifo_rx.h  fifo_tx.h  time.c  time.h
extern_libs/nsq_pybind/: CMakeLists.txt  nsq_pybind.cpp
extern_libs/nsq_pybind/linux/include/: HSDataType.h  HSNsqApi.h  HSNsqStruct.h
extern_libs/nsq_pybind/linux/lib/: README.md
src/: main.py
src/api/: ctp_api.py  gfex_exanic_api.py  nsq_api.py  zy_zmq_api.py
src/collector/: async_collector.py  base_collector.py  ctp_collector.py  gfex_collector.py  nsq_collector.py  zy_collector.py
src/config/: ctp_config_simnow.toml  main_config.yaml  sdk_config.ini
src/processor/: data_cleaner.py  data_parser.py
src/storage/: file_storage.py
src/utils/: __init__.py  common_tools.py  exceptions.py  logger.py
tests/: __init__.py  conftest.py  test_async_collector.py  test_base_collector.py  test_config.py  test_ctp_api.py  test_ctp_collector.py  test_data_cleaner.py  test_data_parser.py  test_file_storage.py  test_utils.py  test_zy_collector.py  test_zy_zmq_api.py
